logs/pyautoweka.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyautoweka'...
Listing './lib/python3.5/site-packages/pyautoweka/java'...
Listing './lib/python3.5/site-packages/pyautoweka/java/params'...
Listing './lib/python3.5/site-packages/pyautoweka/java/params/attribselection'...
Listing './lib/python3.5/site-packages/pyautoweka/java/params/attribselection/eval'...
Listing './lib/python3.5/site-packages/pyautoweka/java/params/attribselection/search'...
Listing './lib/python3.5/site-packages/pyautoweka/java/params/base'...
Listing './lib/python3.5/site-packages/pyautoweka/java/params/ensemble'...
Listing './lib/python3.5/site-packages/pyautoweka/java/params/meta'...
Listing './lib/python3.5/site-packages/pyautoweka/java/smac-v2.04.01-master-447-patched'...
Listing './lib/python3.5/site-packages/pyautoweka/java/smac-v2.04.01-master-447-patched/conf'...
Listing './lib/python3.5/site-packages/pyautoweka/java/smac-v2.04.01-master-447-patched/patches'...
Listing './lib/python3.5/site-packages/pyautoweka/java/smac-v2.04.01-master-447-patched/patches/ca'...
Listing './lib/python3.5/site-packages/pyautoweka/java/smac-v2.04.01-master-447-patched/patches/ca/ubc'...
Listing './lib/python3.5/site-packages/pyautoweka/java/smac-v2.04.01-master-447-patched/patches/ca/ubc/cs'...
Listing './lib/python3.5/site-packages/pyautoweka/java/smac-v2.04.01-master-447-patched/util'...
Compiling './lib/python3.5/site-packages/pyautoweka/pyautoweka.py'...
***   File "./lib/python3.5/site-packages/pyautoweka/pyautoweka.py", line 432
    print "Running experiments"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyautoweka-1.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
